# Grafos2_tour_darcy

./: README.md  graph.py  kruskal.py  main.py  render.yaml
tour_darcy/: manage.py  pyproject.toml
tour_darcy/kruskal/: apps.py  grafo.py  views.py
tour_darcy/kruskal/templates/kruskal/: index.html
tour_darcy/tour_darcy/: asgi.py  settings.py  urls.py  wsgi.py
