[tool.poetry]
name = "tour_darcy"
version = "0.1.0"
description = ""
authors = ["Natan Santana <natan.santana.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
